# DiscoveryService

./: CMakeLists.txt  DiscoveryClient.cpp  DiscoveryClient.h  DiscoveryData.h  DiscoveryService.cpp  DiscoveryService.h  DiscoveryServiceMain.cpp  SimpleUdpSocket.cpp  SimpleUdpSocket.h  Utils.cpp  Utils.h  main.cpp
